Reject a wrong field value during avro schema validation